tests/specs/ecosystem/yossydev/vite_rehype_toc/0_1_1.test
yossydev/vite-rehype-toc/0.1.1
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/vite-rehype-toc.ts:3:10
  | 
3 | function rehypeTOC() {
  |          ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


